# resume-website

./: .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  LICENSE  README.md  amelioration.md  app.py  data.yml  deploy.sh  docker-compose.dev.yml  docker-compose.yml  import.md  lint.sh  mail.info  migrate.sh  pyproject.toml  split.md  template.tex  test_e2e.sh  translations.py
alembic/: env.py
api/: __init__.py  resumes.py
auth/: __init__.py  dependencies.py  routes.py  schemas.py  security.py
core/: DataManager.py  LatexRenderer.py  PdfCompiler.py  StorageManager.py  __init__.py  email.py
curriculum-vitae/: app.py  pyproject.toml  translations.py
database/: models.py
docs/: API.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md
frontend/: .gitignore  Dockerfile.dev  affiche.tsx  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test.sh  test_resume.txt  tsconfig.json  vite.config.ts
templates/: aurianne.tex  aurianne_compact.tex  aurianne_large.tex  double.tex  double_compact.tex  double_large.tex  europass.tex  europass_compact.tex  harvard.tex  harvard_compact.tex  harvard_large.tex  mckinsey_compact.tex  mckinsey_large.tex  michel.tex  michel_compact.tex  michel_large.tex  stephane.tex  stephane_compact.tex  stephane_large.tex
tests/: data_manager_test.py  latex_renderer_test.py  pdf_compiler_test.py  resume_builder_test.py  test_app_helpers.py  test_convert_section_items.py  test_db_config.py  test_health_and_misc.py  test_password_reset.py  test_pydantic_models.py  (+5 more)
(+205 files in other folders)
