[project]
name = "resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "mistralai>=1.0.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.3",
    "boto3>=1.42.38",
    "gunicorn>=24.1.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "email-validator>=2.0.0",
    "httpx>=0.27.0",
]
